# skillengine

./: .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SKILLKIT_A2A_PLAN.md  TECHNICAL_GUIDE.md  architecture.drawio  gen_arch.py  gen_drawio.py
examples/: a2a_coordinator_demo.py  a2a_demo.py  agent_demo.py  code_mode_demo.py  test_skills.py
skills/hello/: SKILL.md
src/skillengine/: __init__.py  agent.py  cache.py  cli.py  commands.py  config.py  context.py  context_files.py  engine.py  events.py  logging.py  model_registry.py  models.py  models_catalog.py  prompts.py
src/skillengine/a2a/: __init__.py  agent_card.py  claude_sdk_bridge.py  client.py  coordinator.py  discovery.py  models.py  registry.py  router.py  server.py
src/skillengine/adapters/: __init__.py  anthropic.py  base.py  openai.py  registry.py  transform.py
src/skillengine/extensions/: __init__.py  api.py  manager.py  models.py
src/skillengine/filters/: __init__.py  base.py  default.py
src/skillengine/harness/: __init__.py  events.py  models.py  prompts.py  runner.py
src/skillengine/loaders/: __init__.py  base.py  markdown.py
src/skillengine/memory/: __init__.py  client.py  config.py  extension.py  hooks.py  tools.py
src/skillengine/modes/: __init__.py  interactive.py  json_mode.py  rpc_mode.py
src/skillengine/optimizer/: __init__.py  changelog.py  models.py  prompts.py  runner.py
src/skillengine/runtime/: __init__.py  base.py  bash.py  boxlite.py  code_mode.py  subprocess_streaming.py
src/skillengine/sandbox/: __init__.py  runner.py
src/skillengine/session/: __init__.py  manager.py  models.py  store.py  tree.py
src/skillengine/tools/: __init__.py  apply_diff.py  apply_patch.py  bash.py  edit.py  find.py  grep.py  ls.py  read.py  registry.py  write.py
src/skillengine/transports/: __init__.py  auto.py  base.py  sse.py  websocket.py
src/skillengine/tui/: __init__.py  ansi.py  autocomplete.py  component.py  container.py  editor_widget.py  input_widget.py  keybindings.py  keys.py  markdown_widget.py  overlay.py  renderer.py  select_list.py
src/skillengine/tui/theme/: __init__.py  defaults.py  loader.py  models.py  schema.py
src/skillengine/utils/: __init__.py  json_parse.py
src/skillengine/web/: __init__.py  server.py  storage.py
src/skillengine/web/static/: app.js  index.html  style.css
src/skillkit/: __init__.py  agent.py
src/skillkit/a2a/: __init__.py  agent_card.py  claude_sdk_bridge.py  client.py  discovery.py  registry.py  router.py  server.py
src/skillkit/loaders/: markdown.py
src/skillkit/runtime/: __init__.py  bash.py  boxlite.py  code_mode.py
src/skillkit/tools/: __init__.py  apply_diff.py  apply_patch.py
tests/: __init__.py  conftest.py  test_a2a_client.py  test_a2a_server.py  test_action_tool_dispatch.py  test_actions.py  test_adapter_registry.py  test_adapters.py  test_agent_card.py  test_autocomplete.py  test_boxlite_runtime.py  test_cache.py  test_claude_sdk_bridge.py  test_cli.py  test_code_mode_runtime.py  test_commands.py  test_config.py  test_context.py  test_context_files.py  test_cross_provider.py  test_discovery.py  test_engine.py  test_events.py  test_extension_tool_dispatch.py  test_extensions.py  test_filters.py  test_harness.py  test_image_vision.py  test_json_mode.py  test_keybindings.py  test_loader.py  test_memory_client.py  test_memory_extension.py  test_memory_hooks.py  test_memory_tools.py  test_model_registry.py  test_optimizer.py  test_packages.py  test_partial_json.py  test_prompts.py  (+14 more)
